--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <title>Redirecting...</title>
-<link rel=canonical href="/docs/appium.html">
-<meta http-equiv=refresh content="0; url=/docs/appium.html">
+<link rel=canonical href="docs/appium.html">
+<meta http-equiv=refresh content="0; url=docs/appium.html">
 <h1>Redirecting...</h1>
-<a href="/docs/appium.html">Click here if you are not redirected.</a>
-<script>location='/docs/appium.html'</script>
+<a href="docs/appium.html">Click here if you are not redirected.</a>
+<script>location='docs/appium.html'</script>
